--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 <!doctype html>
-<html lang="en">
+<html lang="ar">
     <head>
         <meta name="theme-color" content="#212529">
         <meta charset="UTF-8">
         <link rel="icon" type="image/png" href="/logo.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>اوقات الصلاة | مدن السعودية</title>
+        <meta name="description" content="معرفة اوقات الصلاة في 22 مدينة من مدن المملكة العربية السعودية">
+        <!-- Facebook Meta Tags -->
+        <meta property="og:url" content="https://yazn-108.github.io/Prayer-Times">
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="اوقات الصلاة في مدن السعودية">
+        <meta property="og:description" content="معرفة اوقات الصلاة في 22 مدينة من مدن المملكة العربية السعودية">
+        <meta property="og:image" content="/logo.png">
+        <meta property="og:image:alt" content="اوقات الصلاة">
+        <!-- Twitter Meta Tags -->
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:widgets:new-embed-design" content="on">
+        <meta property="twitter:url" content="https://yazn-108.github.io/Prayer-Times">
+        <meta name="twitter:title" content="اوقات الصلاة في مدن السعودية">
+        <meta name="twitter:description" content="معرفة اوقات الصلاة في 22 مدينة من مدن المملكة العربية السعودية">
+        <meta name="twitter:image:src" content="/logo.png">
         <link
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
