--- a/index.html
+++ b/index.html
@@ -5,22 +5,23 @@
         <meta charset="UTF-8">
         <link rel="icon" type="image/png" href="/logo.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>اوقات الصلاة | مدن السعودية</title>
+        <!-- HTML Meta Tags -->
+        <title>اوقات الصلاة في مدن السعودية</title>
         <meta name="description" content="معرفة اوقات الصلاة في 22 مدينة من مدن المملكة العربية السعودية">
         <!-- Facebook Meta Tags -->
-        <meta property="og:url" content="https://yazn-108.github.io/Prayer-Times">
+        <meta property="og:url" content="https://yazn-108.github.io/Prayer-Times/">
         <meta property="og:type" content="website">
         <meta property="og:title" content="اوقات الصلاة في مدن السعودية">
         <meta property="og:description" content="معرفة اوقات الصلاة في 22 مدينة من مدن المملكة العربية السعودية">
-        <meta property="og:image" content="/logo.png">
-        <meta property="og:image:alt" content="اوقات الصلاة">
+        <meta property="og:image" content="https://opengraph.b-cdn.net/production/documents/d7aa148d-120b-49be-8228-8d3ed5c97923.png?token=HMNHI5BHQxM9MsXAgXocrB50pwhLU68rnPhQN_qZ63M&height=1200&width=1200&expires=33245653404">
         <!-- Twitter Meta Tags -->
         <meta name="twitter:card" content="summary_large_image">
-        <meta name="twitter:widgets:new-embed-design" content="on">
-        <meta property="twitter:url" content="https://yazn-108.github.io/Prayer-Times">
+        <meta property="twitter:domain" content="yazn-108.github.io">
+        <meta property="twitter:url" content="https://yazn-108.github.io/Prayer-Times/">
         <meta name="twitter:title" content="اوقات الصلاة في مدن السعودية">
         <meta name="twitter:description" content="معرفة اوقات الصلاة في 22 مدينة من مدن المملكة العربية السعودية">
-        <meta name="twitter:image:src" content="/logo.png">
+        <meta name="twitter:image" content="https://opengraph.b-cdn.net/production/documents/d7aa148d-120b-49be-8228-8d3ed5c97923.png?token=HMNHI5BHQxM9MsXAgXocrB50pwhLU68rnPhQN_qZ63M&height=1200&width=1200&expires=33245653404">
+        <!-- Meta Tags Generated via https://www.opengraph.xyz -->
         <link
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
